# git-ghosts

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  SETUP.md  requirements.md
governance/: CONSTITUTION.md
scripts/: daily-scan.sh
src/: cache.rs  cli.rs  detect.rs  lib.rs  main.rs  models.rs  report.rs  reporter.rs
src/cli/: clean.rs  report.rs
src/detectors/: ghost_files.rs  mod.rs  orphan_commits.rs  zombie_branches.rs
tests/: smoke_test.rs  test_cache.rs  test_clean_cmd.rs  test_cli.rs  test_detect_ghost_files.rs  test_ghost_files.rs  test_models.rs  test_orphan_commits.rs  test_report.rs  test_report_cmd.rs  test_reporter.rs  test_scan_cmd.rs  test_zombie_branches.rs
