[package]
name = "git-ghosts"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "git-ghosts"
path = "src/main.rs"

[lib]
name = "git_ghosts"
path = "src/lib.rs"

[dependencies]
git2 = "0.19"
clap = { version = "4.5", features = ["derive"] }
colored = "2.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
